--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,11 +12,12 @@
     <com.dimfcompany.btn.BiosBtn
         android:id="@+id/btn_test"
 
+        app:icon_size_faw="12dp"
         app:icon_padding_vertical="4dp"
         app:icon_padding_horizontal="24dp"
         app:faw_text="@string/fa_exclamation"
         app:btn_type="icon_right_end"
-        android:layout_width="200dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:text_padding_horizontal="12dp"
         app:background_color="@color/colorPrimary"
