--- a/btn/src/main/res/layout/la_icon_end.xml
+++ b/btn/src/main/res/layout/la_icon_end.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/la_root"
     android:layout_width="wrap_content"
@@ -11,6 +10,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
+        android:layout_gravity="center_vertical"
         android:fontFamily="@font/fawsolid"
         android:gravity="center"
         android:text="@string/fa_save" />
@@ -18,12 +18,13 @@
     <TextView
         android:id="@+id/tv_text"
 
-        android:gravity="center"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
+        android:layout_gravity="center_vertical"
         android:layout_toLeftOf="@id/tv_icon_right"
-        android:layout_toRightOf="@id/tv_icon_left" />
+        android:layout_toRightOf="@id/tv_icon_left"
+        android:gravity="center" />
 
     <TextView
         android:id="@+id/tv_icon_right"
@@ -31,9 +32,10 @@
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
+        android:layout_gravity="center_vertical"
         android:fontFamily="@font/fawsolid"
         android:gravity="center"
         android:text="@string/fa_save" />
 
 
-</RelativeLayout>
+</LinearLayout>
