--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,17 +12,22 @@
     <com.dimfcompany.btn.BiosBtn
         android:id="@+id/btn_test"
 
+        app:icon_color="@color/colorAccent"
+        app:text_color="@color/colorPrimaryDark"
+        app:gradient="true"
         app:icon_size_faw="12dp"
         app:icon_padding_vertical="4dp"
         app:icon_padding_horizontal="24dp"
         app:faw_text="@string/fa_exclamation"
+        app:color_1="@android:color/holo_blue_dark"
+        app:color_2="@android:color/holo_purple"
         app:btn_type="icon_right_end"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:text_padding_horizontal="12dp"
         app:background_color="@color/colorPrimary"
         app:corner_radius="4dp"
-        app:gradient_direction="bottom_to_top"
+        app:gradient_direction="left_to_right"
         app:stroke_width="0dp">
 
     </com.dimfcompany.btn.BiosBtn>
