--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,6 +12,7 @@
     <com.dimfcompany.btn.BiosBtn
         android:id="@+id/btn_test"
 
+        app:btn_font="monlight.ttf"
         app:icon_color="@color/colorAccent"
         app:text_color="@color/colorPrimaryDark"
         app:gradient="true"
@@ -22,7 +23,7 @@
         app:color_1="@android:color/holo_blue_dark"
         app:color_2="@android:color/holo_purple"
         app:btn_type="icon_right_end"
-        android:layout_width="wrap_content"
+        android:layout_width="240dp"
         android:layout_height="wrap_content"
         app:text_padding_horizontal="12dp"
         app:background_color="@color/colorPrimary"
