--- a/btn/src/main/res/layout/la_no_icon.xml
+++ b/btn/src/main/res/layout/la_no_icon.xml
@@ -9,7 +9,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:minWidth="20dp"
-        android:minHeight="20dp" />
+        android:minWidth="20dp" />
 
 </RelativeLayout>
