--- a/btn/src/main/res/values/attrs.xml
+++ b/btn/src/main/res/values/attrs.xml
@@ -21,6 +21,7 @@
         <attr name="icon_size_faw" format="dimension" />
         <attr name="icon_color" format="reference" />
         <attr name="android:minWidth" format="dimension"/>
+        <attr name="android:maxWidth" format="dimension"/>
 
         <attr name="gradient_direction">
             <enum name="bottom_to_top" value="0" />
