--- a/btn/src/main/res/layout/la_icon_end1.xml
+++ b/btn/src/main/res/layout/la_icon_end1.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/la_root"
@@ -7,10 +7,6 @@
     android:layout_height="wrap_content">
 
     <TextView
-        app:layout_constraintRight_toLeftOf="@id/tv_text"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
         android:elevation="1dp"
         android:layout_toLeftOf="@id/tv_text"
         android:id="@+id/tv_icon_left"
@@ -25,10 +21,6 @@
     <TextView
         android:id="@+id/tv_text"
 
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
         android:text="dlgnsljknhfkjldgnh"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -38,10 +30,9 @@
         android:gravity="center" />
 
     <TextView
-        app:layout_constraintLeft_toRightOf="@id/tv_text"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
+
+        android:elevation="1dp"
+        android:layout_toRightOf="@id/tv_text"
         android:id="@+id/tv_icon_right"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -51,4 +42,4 @@
         android:text="@string/fa_save" />
 
 
-</android.support.constraint.ConstraintLayout>
+</RelativeLayout>
