--- a/btn/src/main/res/layout/la_no_icon.xml
+++ b/btn/src/main/res/layout/la_no_icon.xml
@@ -8,7 +8,6 @@
         android:id="@+id/tv_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:minWidth="20dp" />
+        android:layout_centerInParent="true" />
 
 </RelativeLayout>
