--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:clipToPadding="false"
-    tools:context=".MainActivity">
+    >
 
 
 
@@ -19,7 +19,7 @@
 
     <com.dimfcompany.btn.BiosBtn
         app:icon_padding_horizontal="8dp"
-        android:layout_width="wrap_content"
+        android:layout_width="200dp"
         android:layout_height="32dp"
         app:btn_type="no_icon"
         app:faw_text="@string/fa_times"
