--- a/btn/src/main/res/values/attrs.xml
+++ b/btn/src/main/res/values/attrs.xml
@@ -20,8 +20,8 @@
         <attr name="icon_padding_vertical" format="dimension" />
         <attr name="icon_size_faw" format="dimension" />
         <attr name="icon_color" format="reference" />
-        <attr name="min_width" format="dimension"/>
-        <attr name="max_width" format="dimension"/>
+        <attr name="android:minWidth" format="dimension"/>
+        <attr name="android:maxWidth" format="dimension"/>
 
         <attr name="gradient_direction">
             <enum name="bottom_to_top" value="0" />
