--- a/btn/src/main/res/layout/la_icon_end.xml
+++ b/btn/src/main/res/layout/la_icon_end.xml
@@ -1,54 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/la_root"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content">
 
     <TextView
-        app:layout_constraintRight_toLeftOf="@id/tv_text"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:elevation="1dp"
-        android:layout_toLeftOf="@id/tv_text"
         android:id="@+id/tv_icon_left"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
         android:layout_gravity="center_vertical"
+        android:layout_toLeftOf="@id/tv_text"
+        android:elevation="1dp"
         android:fontFamily="@font/fawsolid"
         android:gravity="center"
-        android:text="@string/fa_save" />
+        android:text="@string/fa_save"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintRight_toLeftOf="@id/tv_text"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/tv_text"
 
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:text="dlgnsljknhfkjldgnh"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:layout_gravity="center_vertical"
+        android:gravity="center"
+        android:text="dlgnsljknhfkjldgnh"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
 
-        android:gravity="center" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        app:layout_constraintLeft_toRightOf="@id/tv_text"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
         android:id="@+id/tv_icon_right"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
         android:fontFamily="@font/fawsolid"
         android:gravity="center"
-        android:text="@string/fa_save" />
+        android:text="@string/fa_save"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintLeft_toRightOf="@id/tv_text"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 
 </android.support.constraint.ConstraintLayout>
